--- a/mydoujinlist/navbar.html
+++ b/mydoujinlist/navbar.html
@@ -2,7 +2,13 @@
 	<div>
 		<h1>MyDoujinList</h1>
 		<a href="home.php"><i class="fas fa-home"></i>Home</a>
-		<a href="profile.php"><i class="fas fa-user-circle"></i>Profile</a>
+		<a href="profile.php"><i class="fas fa-user-circle"></i><?=$_SESSION['name']?></a>
 		<a href="logout.php"><i class="fas fa-sign-out-alt"></i>Logout</a>
 	</div>
 </nav>
+
+<style>
+	body {
+		margin: 0;
+	}
+</style>
