--- a/mydoujinlist/index.html
+++ b/mydoujinlist/index.html
@@ -14,7 +14,7 @@ Available at: https://codeshack.io/secure-login-system-php-mysql/
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
   		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
-		<link href="style.css" rel="stylesheet" type="text/css">
+		<link href="login.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
 		<div class="login">
