Add a page for user to view personal doujin list

--- a/mydoujinlist/navbar.html
+++ b/mydoujinlist/navbar.html
@@ -2,6 +2,7 @@
 	<div>
 		<h1>MyDoujinList</h1>
 		<a href="home.php"><i class="fas fa-home"></i>Home</a>
+		<a href="list.php"><i class="fas fa-list"></i>Doujin list</a>
 		<a href="profile.php"><i class="fas fa-user-circle"></i><?=$_SESSION['name']?></a>
 		<a href="logout.php"><i class="fas fa-sign-out-alt"></i>Logout</a>
 	</div>
